--- a/app/assets/stylesheets/monolith/application.tailwind.css
+++ b/app/assets/stylesheets/monolith/application.tailwind.css
@@ -1,4 +1,5 @@
 @import "tailwindcss";
+@import "./daisyui.css";
 
 @theme {
   --font-family-sans: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
